--- a/Exams/Exam - 03 November 2019/FurnitureStore/Solution/index.html
+++ b/Exams/Exam - 03 November 2019/FurnitureStore/Solution/index.html
@@ -1,76 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Furniture Store</title>
-</head>
-<body>
-    <header>
-        <ul class="navigation-left">
+   <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="./styles.css" />
+      <title>Furniture Store</title>
+   </head>
+   <body>
+      <header>
+         <ul class="navigation-left">
             <li>Furniture</li>
             <li>Outdoor</li>
             <li>Storage</li>
             <li>Lighting</li>
             <li>Appliances</li>
-        </ul>
-        <article class="search">
+         </ul>
+         <article class="search">
             <article class="search-input">
-                <input type="text" placeholder="Search anything...">
+               <input type="text" placeholder="Search anything..." />
             </article>
             <article class="search-btn">
-                <i class="fas fa-search"></i>
+               <i class="fas fa-search"></i>
             </article>
-        </article>
-        <p><i class="fas fa-user"></i>My Account</p>
-    </header>
-    <main>
-        <section class="rooms">
+         </article>
+         <p><i class="fas fa-user"></i>My Account</p>
+      </header>
+      <main>
+         <section class="rooms">
             <article class="room">
-                <article class="room-image">
-                    <img src="../Requirements-and-Resources/Media/liv-room.jpg" alt="liv-room">
-                </article>
-                <article class="room-content">
-                    <p>Living Room</p>
-                </article>
-            </article>
-            <article class="room">
-                <article class="room-image">
-                    <img src="../Requirements-and-Resources/Media/kitchen.jpg" alt="kitchen">
-                </article>
-                <article class="room-content">
-                    <p>Kitchen</p>
-                </article>
+               <article class="room-image">
+                  <img
+                     src="../Requirements-and-Resources/Media/liv-room.jpg"
+                     alt="liv-room"
+                  />
+               </article>
+               <article class="room-content">
+                  <p>Living Room</p>
+               </article>
             </article>
             <article class="room">
-                <article class="room-image">
-                    <img src="../Requirements-and-Resources/Media/bedroom.jpg" alt="bedroom">
-                </article>
-                <article class="room-content">
-                    <p>Bedroom</p>
-                </article>
+               <article class="room-image">
+                  <img
+                     src="../Requirements-and-Resources/Media/kitchen.jpg"
+                     alt="kitchen"
+                  />
+               </article>
+               <article class="room-content">
+                  <p>Kitchen</p>
+               </article>
             </article>
             <article class="room">
-                <article class="room-image">
-                    <img src="../Requirements-and-Resources/Media/bathroom.jpg" alt="bathroom">
-                </article>
-                <article class="room-content">
-                    <p>Bathroom</p>
-                </article>
+               <article class="room-image">
+                  <img
+                     src="../Requirements-and-Resources/Media/bedroom.jpg"
+                     alt="bedroom"
+                  />
+               </article>
+               <article class="room-content">
+                  <p>Bedroom</p>
+               </article>
             </article>
-        </section>
-        <section class="collection">
+            <article class="room">
+               <article class="room-image">
+                  <img
+                     src="../Requirements-and-Resources/Media/bathroom.jpg"
+                     alt="bathroom"
+                  />
+               </article>
+               <article class="room-content">
+                  <p>Bathroom</p>
+               </article>
+            </article>
+         </section>
+         <section class="collection">
             <article class="collection-content">
-                <h2>New Fall Collection</h2>
-                <p>Check out our brand new fall items!</p>
-                <button>Shop Now</button>
+               <h2>New Fall Collection</h2>
+               <p>Check out our brand new fall items!</p>
+               <button>Shop Now</button>
             </article>
             <article class="collection-image">
-                <img src="../Requirements-and-Resources/Media/fall-collection.jpg" alt="fall-collection ">
+               <img
+                  src="../Requirements-and-Resources/Media/fall-collection.jpg"
+                  alt="fall-collection "
+               />
             </article>
-        </section>
-    </main>
-</body>
+         </section>
+         <section class="items">
+            <article class="item">
+               <article class="item-image">
+                  <img
+                     src="../Requirements-and-Resources/Media/free-shipping.png"
+                     alt="free-shipping"
+                  />
+               </article>
+               <article class="item-content">
+                  <h4>FREE SHIPPING</h4>
+                  <p>On everything over $50</p>
+               </article>
+            </article>
+            <article class="item">
+               <article class="item-image">
+                  <img
+                     src="../Requirements-and-Resources/Media/amazing-deals.png"
+                     alt="amazing-deals"
+                  />
+               </article>
+               <article class="item-content">
+                  <h4>AMAZING DEALS</h4>
+                  <p>Save up to 70% on high-quality furniture.</p>
+               </article>
+            </article>
+            <article class="item">
+               <article class="item-image">
+                  <img
+                     src="../Requirements-and-Resources/Media/customer-service.png"
+                     alt="customer-service"
+                  />
+               </article>
+               <article class="item-content">
+                  <h4>TOP CUSTOMER SERVCE</h4>
+                  <p>We're glad to help you pick the best item.</p>
+               </article>
+            </article>
+         </section>
+      </main>
+      <footer>
+         <ul class="footer-nav">
+            <li>About Us</li>
+            <li>Locations</li>
+            <li>Return Policy</li>
+            <li>Complaints</li>
+            <li>Gift Cards</li>
+         </ul>
+         <ul class="footer-call">
+            <li>Contact Us</li>
+            <li>Call</li>
+            <li>Mon-Fri: 8AM - 10PM</li>
+         </ul>
+         <ul class="footer-social">
+            <li><i class="fab fa-facebook-square"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-pinterest"></i></li>
+         </ul>
+      </footer>
+   </body>
 </html>
